
Third, this version drops support for Python 2.6. Testing and bug-fixing for this version was taking substantial time with zero evidence that anyone was actually using it. Also, multiple agate dependencies claim to not support 2.6, even though the tests passed.

* Aggregation results are no longer cached. (#378)
* Aggregations now take column names as their first argument. (#378)
* TableSet.aggregate and Table.compute now take the new column name as the first argument. (#378)
* Remove support for Python 2.6.
* Table.to_json is implemented. (#345)
* Table.from_json is implemented. (#344, #347)
* Date and DateTime type testing now takes specified format into account. (#361)
* Number column now takes a float_precision argument.
* Number columns can now be populated with float values. (#370)
* TypeTester can now validate Python native types (not just strings). (#367)
* TypeTester can now be used with Table, not just Table.from_csv. (#350)
* Table, Table.from_csv and TableSet.from_csv now take column names and column types as separate parameters. (#350)
* agate.DEFAULT_NULL_VALUES (list of strings that mean null) is now public.
* Table.from_csv and Table.to_csv are now unicode-safe without using csvkit.
* agate can now be used as a drop-in replacement for Python's csv module.
* Migrated csvkit's unicode CSV reading/writing support into agate. (#354)

1.0.1
-----

* TypeTester now takes a "limit" arg that restricts how many rows it tests. (#332)
* Table.from_csv now supports CSVs with neither headers nor manual column names.
* Tables can now be created with automatically generated column names. (#331)
* File handles passed to Table.to_csv are now left open. (#330)
* Added Table.print_csv method. (#307, #339)
* Fixed stripping currency symbols when casting Numbers from strings. (#333)
* Fixed two major join issues. (#336)

1.0.0
------

* Table.from_csv now defaults to TypeTester() if column_info is not provided. (#324)